--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ color: #434455;
 font-style: normal;
 font-weight: 700;
 font-size: 56px;
-line-height: 1,07;
+line-height: 1.07;
 letter-spacing: 0.02em;
 color: #FFFFFF;
 }
@@ -85,7 +85,7 @@ color: #FFFFFF;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 1,5;
+line-height: 1.5;
 letter-spacing: 0.04em;
 color: #FFFFFF;    
 background: #4D5AE5;
@@ -100,5 +100,93 @@ border-radius: 4px;
 .hero-btn:focus {
     background: #404BBF;
 }
-/*  */
+
+/* Advantages */
+
+.section-title {
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+.title-text {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+/* What are we doing */
+
+.what-title {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.1;
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+
+/* Team */
+
+.team-section {
+background: #F4F4FD;
+}
+.our-title {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+
+.team-title {
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2E2F42;
+background: #FFFFFF;
+}
+
+.team-text {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+background: #FFFFFF;
+}
+.team-professions {
+  background: #FFFFFF;  
+}
+
+/* Footer */
+
+.footer {
+    background: #2E2F42;
+}
+
+.footer-logo {
+
+text-decoration: none;
+text-transform: uppercase;
+font-family: 'Raleway';
+font-weight: 800;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+color: #4D5AE5;
+}
+.span-logo {
+    color: #F4F4FD;
+}
+.footer-text {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #F4F4FD;
+}
+
 
