--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
-    font-family: roboto, sans-serif ;
+    font-family: Roboto, sans-serif ;
     background-color: FFFFFF;
-    color: #2E2F42;
+    color: #434455;
 }
 .list {
     list-style: none;
@@ -15,16 +15,17 @@ body {
 .header-logo {
 text-decoration: none;
 text-transform: uppercase;
-font-family: 'Raleway';
+font-family: 'Raleway', sans-serif;
 font-weight: 800;
 font-size: 18px;
-line-height: 1.33;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
 }
 .logo-span {
-    color: #2E2F42;
+font-family: 'Raleway', sans-serif;
+color: #2E2F42;
 }
 
 .page-header {
@@ -79,6 +80,7 @@ font-weight: 700;
 font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
+text-align: center;
 color: #FFFFFF;
 }
 .hero-btn {
@@ -91,6 +93,7 @@ color: #FFFFFF;
 background: #4D5AE5;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+cursor: pointer;
 }
 .hero-btn:active {
   color: #FFFFFF;
@@ -171,7 +174,7 @@ background: #FFFFFF;
 
 text-decoration: none;
 text-transform: uppercase;
-font-family: 'Raleway';
+font-family: 'Raleway', sans-serif;
 font-weight: 800;
 font-size: 18px;
 line-height: 1.17;
