--- a/css/styles.css
+++ b/css/styles.css
@@ -125,8 +125,10 @@ color: #434455;
 .what-title {
 font-weight: 700;
 font-size: 36px;
-line-height: 1.1;
+line-height: 1.11;
 letter-spacing: 0.02em;
+text-align: center;
+text-transform: capitalize;
 color: #2E2F42;
 }
 
@@ -140,6 +142,8 @@ font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
+text-align: center;
+text-transform: capitalize;
 color: #2E2F42;
 }
 
@@ -171,7 +175,6 @@ background: #FFFFFF;
 }
 
 .footer-logo {
-
 text-decoration: none;
 text-transform: uppercase;
 font-family: 'Raleway', sans-serif;
@@ -179,10 +182,12 @@ font-weight: 800;
 font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
+text-transform: uppercase;
+text-decoration: none;
 color: #4D5AE5;
 }
 .span-logo {
-    color: #F4F4FD;
+color: #F4F4FD;
 }
 .footer-text {
 font-weight: 400;
@@ -192,4 +197,50 @@ letter-spacing: 0.02em;
 color: #F4F4FD;
 }
 
+/* Portfolio */
 
+.portfolio-button {
+font-family: 'Roboto', sans-serif;
+font-style: normal;    
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #4D5AE5;
+background: #F4F4FD;
+border: 1px solid #E7E9FC;
+border-radius: 4px;
+cursor: pointer;
+}
+
+.portfolio-button:active {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+background: #404BBF;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+}
+
+.portfolio-button:hover,
+.portfolio-button:focus {
+background-color: #404bbf;
+color: #FFFFFF;
+}
+.title-img {
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-decoration: none;
+color: #2E2F42;
+}
+.hero-text {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
