--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ text-align: center;
 color: #FFFFFF;
 }
 .hero-btn {
+font-family: "Roboto", sans-serif;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
@@ -101,7 +102,7 @@ cursor: pointer;
 
 .hero-btn:hover,
 .hero-btn:focus {
-    background: #404BBF;
+background-color: #404BBF;
 }
 
 /* Advantages */
